add better way to add the ansible to the current .bashrc

--- a/roles/bashrc/templates/root.sh.j2
+++ b/roles/bashrc/templates/root.sh.j2
@@ -1,4 +1,6 @@
-echo epages defaults
-. /etc/init.d/default epages6
+source /etc/default/epages6
+export EPAGES_TESTSITE=Store
+export STORE=Store
 
 export PATH=$PATH:{{ ansible_env['HOME'] }}/eclipse
+
