--- a/roles/bashrc/templates/newBashrc.j2
+++ b/roles/bashrc/templates/newBashrc.j2
@@ -1,5 +1,5 @@
 #copy old bash
-"{{currentBashrc.stdout}}"
+{{currentBashrc.stdout}}
 
 # AnsibleCopyToken
 # ansible auto include for multiple .bashrc files
