add git shortcuts

--- a/roles/epages/templates/epagesAlias.sh.j2
+++ b/roles/epages/templates/epagesAlias.sh.j2
@@ -22,3 +22,4 @@ alias epjrestart="service epagesj restart"
 alias epjstop="service epagesj stop"
 
 alias cdcartridges="cd $EPAGES_CARTRIDGES/DE_EPAGES"
+alias buildmakefile="$PERL Makefile.PL"
