--- a/roles/git/templates/gitAliases.sh.j2
+++ b/roles/git/templates/gitAliases.sh.j2
@@ -1,3 +1,10 @@
+alias gstatus="git status"
 alias gcommit="git add -A && git commit"
 alias grebase="git pull --rebase --prune"
 alias gcheckout="git checkout -b"
+alias greset="git reset HEAD --hard"
+alias gltree="git log --graph --oneline --decorate --all"
+alias glfiles="git log --graph --oneline --decorate --all --name-status"
+alias gl="git log --oneline"
+alias gpush="git push"
+
