--- a/roles/epages/templates/epagesAlias.sh.j2
+++ b/roles/epages/templates/epagesAlias.sh.j2
@@ -12,14 +12,8 @@ alias deletecommunication="rm -f $EPAGES_LOG/communication.log"
 
 alias deletelogs="rm -rf $EPAGES_LOG/*"
 
-alias ep6start="service epages6 start"
-alias ep6restart="service epages6 start_service"
-alias ep6stop="service epages6 stop"
-
-alias epjstatus="service epagesj status"
-alias epjstart="service epagesj start"
-alias epjrestart="service epagesj restart"
-alias epjstop="service epagesj stop"
+alias ep6="service epages6"
+alias epj="service epagesj"
 
 alias cdcartridges="cd $EPAGES_CARTRIDGES/DE_EPAGES"
 alias buildmakefile="$PERL Makefile.PL"
