add 3rdparty link

--- a/roles/epages/templates/epagesVmSshAlias.sh.j2
+++ b/roles/epages/templates/epagesVmSshAlias.sh.j2
@@ -15,4 +15,5 @@ alias sshinternblue='ssh root@blueteam-vm-01.intern.epages.de'
 alias sshinternnavy='ssh root@navyteam-vm-01.intern.epages.de'
 
 alias sshtrident='ssh root@trident.vm-intern.epages.com'
+alias ssh3rdparty='ssh root@3rdparty.vm-intern.epages.com'
 
